--- a/ecotech2/src/main/resources/templates/intranet/perfil/EditarPerfil.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/EditarPerfil.html
@@ -8,57 +8,70 @@
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/javascript.js"></script>
     <link rel="shortcut icon" href="/img/icone.ico">
-    <title>Login</title>
+    <title>perfil</title>
 </head>
 <body>
-    <header class="black">
+     <header class="black">
         <!-- Logo -->
         <img src="/img/logo.png" alt="Logo" class="logo">
         <!-- Menu -->
         <nav>
             <a href="/ecotech/cliente/index">Home</a>
-            
+            <a href="/ecotech/cliente/perfil">Tela Perfil</a>
+               <a href="/ecotech/locais/todos-locais">Centros de coleta</a>
         </nav>
        <br>       <br>
 
 
        
     </header>
-
-
     <main>
-      <br><br><br><br><br><br>
-            <div class="login-box"><br><br>
-                <h2>Insira seu E-mail para se cadastrar ou entrar</h2><br><br>
-                <form th:action="@{/ecotech/cliente/login}" th:object="${usuario}" method="post" class="loginForm">
-                    <h4>Insira seu E-mail</h4>
-                    <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
-                    <br><h4>Insira sua senha</h4>
-                    <div class="password-input">
-                        <input type="password" name="senha" id="senha" placeholder="Senha" required th:field="*{senha}">
-                        
-                        
-                        <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha"><br>Criar Conta</a>
-                         <a href="/ecotech/cliente/senha" class="esqueci-senha"><br>Esqueci minha senha</a>
-                    </div>
-                    
-                    <br><br><br><br>
-                  
-                         
-                        <input type="submit" value="continuar"  style="margin: 0 auto;
-                        background-color: #161616; /* Cor de fundo do botão */
-                        color: #fff;
-                        left: 48%;
-                        border: none;
-                        padding: 15px 40px;
-                        border-radius: 5px;
-                        cursor: pointer;
-                        margin: 0 auto; text-decoration: none" >
-                </form><br><br><br>
+        <br><br>
+        <form th:action="@{/ecotech/cliente/update}" th:object="${cliente}" method="post">
+        <div class="regis_box profile_box">
+            <div>
+                <img src="/img/logo.png" id="profilePicture"><br><br><br>
+                <input type="submit" class="buttonColored" value="Salvar">
+                
+                
             </div>
+            <div id="profile_infsBox"> 
+                <h1>Seu perfil</h1>
+                <div class="profile_infs">
+                    
+                    	nome<br>
+                        <input type="text" required placeholder="Nome" th:field="*{nome}"><br><br>
+                        
+                        sobrenome<br>
+                         <input type="text" required placeholder="Sobrenome" th:field="*{sobrenome}"><br><br>
+                         
+                         cpf:<br>
+                        <input type="text" required placeholder="Cpf" th:field="*{cpf}"><br><br>
+                        
+                        telefone<br>
+                        <input type="text" required placeholder="Telefone" th:field="*{telefone}"><br><br>
+                        
+                        email<br>
+                         <input type="email" required placeholder="email" th:field="*{email}"><br><br>
+                         
+                         nascimento<br>
+                         <input type="date" required placeholder="data de Nascimento" th:field="*{dataNascimento}"><br><br>
+                          
+                          senha:<br>
+                         <input type="text" required placeholder="senha" th:field="*{senha}"><br><br>
+						
+                        <br>
+                        
+                  
+                    
+                    
+                   
+                </div>
+            </div>
+            </form>
+        </div>
+        <br><br><br>
     </main>
-        <br><br><br><br><br><br><br><br><br><br><br>
-        
     <footer>
         <div class="footer-content">
             <div class="footer-section">
