--- a/ecotech2/src/main/resources/templates/intranet/perfil/TelaPerfil.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/TelaPerfil.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/javascript.js"></script>
     <link rel="shortcut icon" href="/img/icone.ico">
-    <title>Login</title>
+    <title>Perfilr</title>
 </head>
 <body>
     <header class="black">
@@ -17,7 +17,8 @@
         <!-- Menu -->
         <nav>
             <a href="/ecotech/cliente/index">Home</a>
-            
+            <a href="/ecotech/cliente/perfil">Tela Perfil</a>
+               <a href="/ecotech/locais/todos-locais">Centros de coleta</a>
         </nav>
        <br>       <br>
 
@@ -26,39 +27,32 @@
     </header>
 
 
+    </header>
     <main>
-      <br><br><br><br><br><br>
-            <div class="login-box"><br><br>
-                <h2>Insira seu E-mail para se cadastrar ou entrar</h2><br><br>
-                <form th:action="@{/ecotech/cliente/login}" th:object="${usuario}" method="post" class="loginForm">
-                    <h4>Insira seu E-mail</h4>
-                    <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
-                    <br><h4>Insira sua senha</h4>
-                    <div class="password-input">
-                        <input type="password" name="senha" id="senha" placeholder="Senha" required th:field="*{senha}">
-                        
-                        
-                        <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha"><br>Criar Conta</a>
-                         <a href="/ecotech/cliente/senha" class="esqueci-senha"><br>Esqueci minha senha</a>
-                    </div>
-                    
-                    <br><br><br><br>
-                  
-                         
-                        <input type="submit" value="continuar"  style="margin: 0 auto;
-                        background-color: #161616; /* Cor de fundo do botão */
-                        color: #fff;
-                        left: 48%;
-                        border: none;
-                        padding: 15px 40px;
-                        border-radius: 5px;
-                        cursor: pointer;
-                        margin: 0 auto; text-decoration: none" >
-                </form><br><br><br>
+        <br><br>
+        <div class="regis_box profile_box">
+            <div>
+				
+                <img src="/img/logoeco.png"  id="profilePicture"><br><br><br>
+                <a href="/ecotech/cliente/editar">Editar</a><br>
+                <a href="/ecotech/cliente/logout" id="logOut">LogOut</a><br>
+                <a href="/ecotech/cliente/excluir" id="logOut">Excluir conta</a><br>
             </div>
+            <div id="profile_infsBox"> 
+                <h1>Seu perfil</h1>
+                <div class="profile_infs" th:each="c : ${cliente}">
+                    <p>nome: <span th:text="${c.nome}"></span> <span th:text="${c.sobrenome}"></span></p>
+                    <p>Cpf: <span th:text="${c.cpf}"></span></p> 
+                    <p>telefone: <span th:text="${c.telefone}"></span> </p>
+					<p>email: <span th:text="${c.email}"></span></p>
+					
+                   
+                </div>
+            </div>
+           
+        </div>
+        <br><br><br>
     </main>
-        <br><br><br><br><br><br><br><br><br><br><br>
-        
     <footer>
         <div class="footer-content">
             <div class="footer-section">
@@ -92,10 +86,11 @@
             </div>
             <div class="footer-section">
                 <h3>Formas de Pagamento</h3>
-                <ul class="payment-icons">
+              <ul class="payment-icons">
                     <img src="/img/mastercard.png" alt="Visa">
                     <img src="/img/visa.png" alt="MasterCard">
                     <img src="/img/pix.png" alt="MasterCard">
+                </ul>
                 </ul>
             </div>
         </div>
