--- a/ecotech2/src/main/resources/templates/intranet/perfil/CadastrarCliente.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/CadastrarCliente.html
@@ -31,18 +31,16 @@
       <div class="regis_box">
         <form th:action="@{/ecotech/cliente/add-cliente}" th:object="${cliente}" method="post">
             <h1>Cadastrar-se</h1>
-            <input type="text" th:field="*{nome}" required placeholder="Nome*" class="bordasSuaves">
-            <input type="text" th:field="*{sobrenome}" required placeholder="Sobrenome*" class="bordasSuaves"><br/>
-
-            <input type="text" th:field="*{cpf}" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="Cpf*" class="bordasSuaves" required>
-            <input type="text" th:field="*{telefone}" pattern="\(\d{2}\) \d{4,5}-\d{4}" required placeholder="Telefone*" class="bordasSuaves"><br/>
-
-            <input type="date" th:field="*{dataNascimento}" required placeholder="data de nascimento*" class="bordasSuaves">
+            <input type="text" th:field="*{nome}" required placeholder="Nome Completo*" class="bordasSuaves">  
             <input type="email" th:field="*{email}" required placeholder="Email*" class="bordasSuaves"><br/>
 
             <input type="password" th:field="*{senha}" required placeholder="digite sua senha*" class="bordasSuaves" id="senha1">
             <input type="password" required placeholder="repita sua senha*" class="bordasSuaves" id="senha2"><br/><br/>
-
+			 <select th:field="*{nivelAcesso}" required class="bordasSuaves">
+			            <option value="">Selecione o Nível de Acesso*</option>
+			            <option value="funcionario">Funcionário</option>
+			            <option value="gerente">Gerente</option>
+			 </select><br/>
             <input type="submit" class="buttonColored" value="Cadastrar"><br/><br/>
         </form>
       </div>
