--- a/ecotech2/src/main/resources/templates/intranet/editar-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/editar-local.html
@@ -40,8 +40,8 @@
 
 
 
-
-		<form action="#" th:action="@{/ecotech/locais/update/{id}(id=${local.id})}" enctype="multipart/form-data"
+<div style="padding-left: 10%;">
+		<form action="#" th:action="@{/ecotech/locais/update/{id}(id=${local.id})} " style="margin:5%; padding-right: 10% " enctype="multipart/form-data"
 			th:object="${local}" method="post">
 			<div class="row">
 
@@ -162,12 +162,12 @@
 
 
 				<div class="form-group col-md-12">
-					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local">
+					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local" style="background-color: #82AE64;">
 				</div>
 
 			</div>
 		</form>
-
+</div>
 	</main>
 	<footer>
 		<div class="footer-content">
