--- a/ecotech2/src/main/resources/templates/intranet/locais.html
+++ b/ecotech2/src/main/resources/templates/intranet/locais.html
@@ -21,7 +21,7 @@
         <nav>
             <a href="/ecotech/cliente/index">Home</a>
             <a href="/ecotech/cliente/perfil">Tela Perfil</a>
-               <a href="/ecotech/locais/todos-locais">Centros de coleta</a>
+            <a href="/ecotech/locais/todos-locais">Centros de coleta</a>
         </nav>
        <br>       <br>
 
@@ -32,7 +32,7 @@
     <main>
         <br><br>
         
-          <a th:href="@{/ecotech/locais/novo-local}" class="btn btn-primary m-2">
+          <a th:href="@{/ecotech/locais/novo-local}" class="btn btn-primary m-2" style="background-color: #82AE64;">
              	<i class="fas fa-cart-plus ml-2"></i>
              	Novo Produto
             </a>
@@ -61,7 +61,7 @@
                
                             <td th:text="${local.statusPonto ? 'Ativo' : 'Inativo'}"></td>
                             <td>
-                                <a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}" class="btn btn-primary">
+                                <a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}" class="btn btn-primary" style="background-color: #82AE64;">
                                     <i class="fas fa-edit ml-2"></i>
                                 </a>
                             </td>
