--- a/ecotech2/src/main/resources/templates/intranet/editar-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/editar-local.html
@@ -162,7 +162,7 @@
 
 
 				<div class="form-group col-md-12">
-					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local" style="background-color: #82AE64;">
+					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local" style="background-color: #82AE64; border:#82AE64">
 				</div>
 
 			</div>
