--- a/ecotech2/src/main/resources/templates/intranet/locais.html
+++ b/ecotech2/src/main/resources/templates/intranet/locais.html
@@ -32,9 +32,9 @@
     <main>
         <br><br>
         
-          <a th:href="@{/ecotech/locais/novo-local}" class="btn btn-primary m-2" style="background-color: #82AE64;">
+          <a th:href="@{/ecotech/locais/novo-local}" class="btn btn-primary m-2" style="background-color: #82AE64;border:#82AE64">
              	<i class="fas fa-cart-plus ml-2"></i>
-             	Novo Produto
+             	Novo EcoPontos
             </a>
         
             <div>
@@ -61,7 +61,7 @@
                
                             <td th:text="${local.statusPonto ? 'Ativo' : 'Inativo'}"></td>
                             <td>
-                                <a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}" class="btn btn-primary" style="background-color: #82AE64;">
+                                <a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}" class="btn btn-primary" style="background-color: #82AE64; border:#82AE64">
                                     <i class="fas fa-edit ml-2"></i>
                                 </a>
                             </td>
