--- a/ecotech2/src/main/resources/templates/intranet/novo-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/novo-local.html
@@ -147,8 +147,8 @@
 				</div>
 
 
-				<div class="form-group col-md-12">
-					<input type="submit" class="btn btn-primary mb-2" value="Gravar Novo Local" style="background-color: #82AE64;">
+				<div class="form-group col-md-12" style="text-align:center;">
+					<input type="submit" class="btn btn-primary mb-2" value="Gravar Novo Local" style="background-color: #82AE64;  border:none">
 				</div>
 			</div>
 		</form>
