--- a/ecotech2/src/main/resources/templates/intranet/perfil/EditarPerfil.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/EditarPerfil.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/javascript.js"></script>
-    <link rel="shortcut icon" href="/img/icone.ico">
-    <title>perfil</title>
+    <link rel="shortcut icon" href="/img/logoeco.png">
+    <title> Editar Perfil</title>
 </head>
 <body>
      <header class="black">
