--- a/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/javascript.js"></script>
-    <link rel="shortcut icon" href="/img/icone.ico">
+    <link rel="shortcut icon" href="/img/logoeco.png">
     <title>Login</title>
 </head>
 <body>
@@ -40,7 +40,6 @@
                             <i id="toggleIcon" class="fas fa-eye"></i>
                         </span>
                         <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha"><br>Criar Conta</a>
-                         <a href="/ecotech/cliente/senha" class="esqueci-senha"><br>Esqueci minha senha</a>
                     </div>
                     
                     <br><br><br><br>
