--- a/ecotech2/src/main/resources/templates/intranet/editar-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/editar-local.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="/style.css">
 	<script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
 	<script src="/javascript.js"></script>
-	<link rel="shortcut icon" href="/img/icone.ico">
+    <link rel="shortcut icon" href="/img/logoeco.png">
+
 	<title>Editar</title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -19,20 +20,21 @@
 </head>
 
 <body>
-	<header class="black">
-		<!-- Logo -->
-		<img src="/img/logo.png" alt="Logo" class="logo">
-		<!-- Menu -->
-		<nav>
-			<a href="/ecotech/cliente/index">Home</a>
-			<a href="/ecotech/cliente/perfil">Tela Perfil</a>
-			<a href="/ecotech/locais/todos-locais">Centros de coleta</a>
-		</nav>
-		<br> <br>
+  <header class="black" style="padding-bottom: 3%; padding-top:4%">
+        <!-- Logo -->
+        <img src="/img/logo.png" alt="Logo" class="logo">
+        <!-- Menu -->
+        <nav class="nav">
+            <a href="/ecotech/cliente/index" >Home</a>
+            <a href="/ecotech/cliente/perfil" >Tela Perfil</a>
+            <a href="/ecotech/locais/todos-locais" >Centros de coleta</a>
+        </nav>
+       <br><br> <br>
 
 
+       
+    </header>
 
-	</header>
 
 	<main>
 		<br><br>
