--- a/ecotech2/src/main/resources/templates/intranet/locais.html
+++ b/ecotech2/src/main/resources/templates/intranet/locais.html
@@ -10,20 +10,21 @@
     <link rel="shortcut icon" href="/img/icone.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-  
-    <title>Perfilr</title>
+     <link rel="shortcut icon" href="/img/logoeco.png">
+
+    <title>Todos EcoPontos</title>
 </head>
 <body>
-   <header class="black">
+   <header class="black" style="padding-bottom: 3%; padding-top:4%">
         <!-- Logo -->
         <img src="/img/logo.png" alt="Logo" class="logo">
         <!-- Menu -->
-        <nav>
-            <a href="/ecotech/cliente/index">Home</a>
-            <a href="/ecotech/cliente/perfil">Tela Perfil</a>
-            <a href="/ecotech/locais/todos-locais">Centros de coleta</a>
+        <nav class="nav">
+            <a href="/ecotech/cliente/index" >Home</a>
+            <a href="/ecotech/cliente/perfil" >Tela Perfil</a>
+            <a href="/ecotech/locais/todos-locais" >Centros de coleta</a>
         </nav>
-       <br>       <br>
+       <br><br> <br>
 
 
        
