--- a/ecotech2/src/main/resources/templates/intranet/perfil/CadastrarCliente.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/CadastrarCliente.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/secotech/javascript.js"></script>
-    <link rel="shortcut icon" href="/img/icone.ico">
-    <title>Cadastrar</title>
+    <link rel="shortcut icon" href="/img/logoeco.png">
+    <title>Cadastrar Funcionário </title>
 </head>
 <body>
     
@@ -47,33 +47,7 @@
       
       <br><br><br/>
 
-      <h2>Usamos seu cadastro de forma 100% segura para:</h2>
-      <br>
-      <div class="regis_infs">
-            <div class="regis_icon">
-                <i class="fa-regular fa-user"></i>
-                <p>Identificar seu perfil</p>
-            </div>
-
-            <div class="regis_icon">
-                <i class="fa-regular fa-bell"></i>
-                <p>Notificar sobre o andamento do seu pedido</p>
-            </div>
-
-            <div class="regis_icon">
-                <i class="fa-solid fa-clock-rotate-left"></i>
-                <p>Gerenciar seu histórico de compras</p>
-            </div>
-
-            <div class="regis_icon">
-                <i class="fa-regular fa-file"></i>
-                <p>Acelerar o preenchimento  de suas informações</p>
-            </div>
-      </div>
-
-
-      <br><br>
-      <br><br>
+    
 
 
     </main>
